test/classes/initializers/errors/name-bad-field.bad
name-bad-field.chpl:6: In initializer:
name-bad-field.chpl:7: error: Field used before it is initialized
